# jobs_hk

./: .gitignore  LICENSE  README.md  README_zh_cn.md  README_zh_hk.md  config.toml  pyproject.toml
prompts/: project_assistant.md  sql_generator_sqlite_only.md
src/jobs_hk/: db.py  env.py  main.py  other.py  queue_manager.py  schemas.py  waiting.py  web.py
src/jobs_hk/cli/: __main__.py  ask.py  context.py  fill_jobs.py  fill_jobs_multi_threads.py  search_jobs.py
src/jobs_hk/filters/: job_card_filter.py  job_search_filter.py
src/jobs_hk/libs/: datas.py  db.py  env.py  filter.py  log.py  other.py  web.py
tests/: test_ask.py
