[project]
name = "jobs_hk"
version = "1.0"
dependencies = [
    "requests",
    "bs4",
    "sqlalchemy",
    "sqlmodel"
]

[project.scripts]
run-search-job = "jobs_hk.cli.search_jobs:run"
run-fill-job = "jobs_hk.cli.fill_jobs:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"